crates/cli_bin/tests/snapshots/apply__filtered_apply_custom-2.snap
---
source: crates/cli_bin/tests/apply.rs
expression: content2
---
import { some, uniqBy } from 'lodash';
import type { BaseUserAccount, UserAccount } from '../services/auth';
import { isUserAccount } from '../services/auth';
import { isUserAccount } from '../services/auth';
import { newbar } from '../services/auth';

// wowza break
import { foobar } from '../services/auth';
import { ignoreTHhis } from '../services/auth';
import { client } from '../lib/client';
