crates/cli_bin/tests/snapshots/apply__filtered_apply_custom.snap
---
source: crates/cli_bin/tests/apply.rs
expression: content
---
import { some, uniqBy } from 'lodash';
import type { BaseUserAccount, UserAccount } from '../services/auth';
import { isUserAccount } from '../services/auth';
// eslint-disable-next-line import/no-cycle
import { client } from '../lib/client';
import { isUserAccount } from '../services/auth';
import { foobar } from '../services/auth';
import { newbar } from '../services/auth';
import { crewbar } from '../services/auth';
