crates/cli_bin/tests/snapshots/apply__gives_helpful_error_for_file.snap
---
source: apps/marzano/cli/tests/apply.rs
expression: stdout
---
ERROR (code: 299) - check_actions_clean/.grit/grit.yaml is a config file, not a pattern. Try applying the pattern by name.

