crates/cli_bin/tests/snapshots/apply__language_option_conflict_apply.snap
---
source: crates/cli_bin/tests/apply.rs
assertion_line: 2113
expression: content
---
import os

import openai
from flask import Flask, redirect, render_template, request, url_for

app = Flask(__name__)
openai.api_key = os.getenv("OPENAI_API_KEY")
