crates/cli_bin/tests/snapshots/apply__markdown_pattern_with_invalid_name.snap
---
source: crates/cli_bin/tests/apply.rs
expression: "String::from_utf8(output.stderr)?"
---
Error: Failed to parse markdown pattern .grit/patterns/invalid-name.md

Caused by:
    Invalid pattern name: 'invalid-name'. Grit patterns must match the regex /^[A-Za-z_][A-Za-z0-9_]*$/. For more info, consult the docs at https://docs.grit.io/guides/patterns#pattern-definitions.
